Added Recharge Battery case